--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="">
-		<h2 id="welcome">Anna salainen avain</h2>
+		<h2 id="welcome" class="text-center">Anna salainen avain</h2>
 	</div>
 </div>
 
